--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,6 +37,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+      - name: Install VIZ
+        run: npm install @viz-js/viz
       - name: Build
         run: npm run build
       - name: Setup Pages
